--- a/static/styles/stylus/main.styl
+++ b/static/styles/stylus/main.styl
@@ -16,3 +16,26 @@ body {
 	font-size: 12px;
 	padding: 10px;
 }
+
+.b-jquery {
+	display: block;
+
+	&-block {
+		line-height: 1.666em;
+		border-radius: 5px;
+		border: 1px #ccc solid;
+		padding: 10px;
+		margin: 2px;
+		display: inline-block;
+		vertical-align: top;
+	}
+}
+
+.b-code {
+	font: 12px Consolas, "Liberation Mono", Courier, monospace;
+	margin: 0 2px;
+	padding: 0px 5px;
+	border: 1px solid #eaeaea;
+	background-color: #f8f8f8;
+	border-radius: 3px;
+}
