--- a/static/styles/stylus/main.styl
+++ b/static/styles/stylus/main.styl
@@ -28,14 +28,39 @@ body {
 		margin: 2px;
 		display: inline-block;
 		vertical-align: top;
+
+		&-title {
+			margin-bottom: 10px;
+		}
 	}
 }
 
 .b-code {
 	font: 12px Consolas, "Liberation Mono", Courier, monospace;
 	margin: 0 2px;
-	padding: 0px 5px;
+	padding: 1px 5px;
 	border: 1px solid #eaeaea;
 	background-color: #f8f8f8;
-	border-radius: 3px;
+	border-radius: .25em;
+}
+
+.b-label {
+	display: inline;
+	padding: .2em .6em .3em;
+	font-size: 75%;
+	font-weight: 700;
+	line-height: 1;
+	color: #fff;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	border-radius: .25em;
+
+	&-success {
+		background-color: #5cb85c;
+	}
+
+	&-error {
+		background-color: #d9534f;
+	}
 }
