Created first working prototype of preprocess plugin + added demo

--- a/static/styles/stylus/main.styl
+++ b/static/styles/stylus/main.styl
@@ -15,6 +15,27 @@ body {
 .b-content {
 	font-size: 12px;
 	padding: 10px;
+
+	&-list {
+		margin-top: 5px;
+		padding-left: 20px;
+
+		li {
+			padding: 5px 0;
+		}
+	}
+}
+
+ul.b-content-list {
+	li {
+		list-style-type: disc;
+	}
+}
+
+ol.b-content-list {
+	li {
+		list-style-type: decimal;
+	}
 }
 
 .b-jquery {
