Added version widget

--- a/static/styles/stylus/main.styl
+++ b/static/styles/stylus/main.styl
@@ -10,6 +10,12 @@ html {
 body {
 	font: .9375em arial-font-family;
 	color: #000;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-ms-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
+	font-smoothing: antialiased;
 }
 
 .b-content {
@@ -44,23 +50,4 @@ body {
 	border-radius: .25em;
 }
 
-.b-label {
-	display: inline;
-	padding: .2em .6em .3em;
-	font-size: 75%;
-	font-weight: 700;
-	line-height: 1;
-	color: #fff;
-	text-align: center;
-	white-space: nowrap;
-	vertical-align: baseline;
-	border-radius: .25em;
-
-	&-success {
-		background-color: #5cb85c;
-	}
-
-	&-error {
-		background-color: #d9534f;
-	}
-}
+@import 'label'
