Releasing demos for version 0.5.0

--- a/static/styles/css/main.css
+++ b/static/styles/css/main.css
@@ -1,47 +1,93 @@
 
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000375}}
+
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/stylus\/lib\/functions\/index\.styl}line{font-family:\000031}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/stylus\/lib\/functions\/index\.styl}line{font-family:\00003293}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/index\.styl}line{font-family:\0000314}}
 
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/index\.styl}line{font-family:\0000314}}
 
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/border\.styl}line{font-family:\000032}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/clearfix\.styl}line{font-family:\000032}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/border\.styl}line{font-family:\0000312}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/clearfix\.styl}line{font-family:\000033}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/clearfix\.styl}line{font-family:\0000331}}
 
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/color-image\.styl}line{font-family:\000032}}
 
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/color-image\.styl}line{font-family:\000036}}
+
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/flex\.styl}line{font-family:\000036}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/gradients\.styl}line{font-family:\00003154}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/flex\.styl}line{font-family:\00003197}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/config\.styl}line{font-family:\00003154}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/gradients\.styl}line{font-family:\0000394}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/gradients\.styl}line{font-family:\0000394}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/config\.styl}line{font-family:\0000394}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/config\.styl}line{font-family:\0000312}}
 
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/iconic\.styl}line{font-family:\000032}}
 
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/iconic\.styl}line{font-family:\000039}}
+
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/image\.styl}line{font-family:\000032}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/overflow\.styl}line{font-family:\0000325}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/image\.styl}line{font-family:\0000327}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/positions\.styl}line{font-family:\000033}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/overflow\.styl}line{font-family:\0000327}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\000033}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/overflow\.styl}line{font-family:\0000323}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/index\.styl}line{font-family:\000035}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/positions\.styl}line{font-family:\000039}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/positions\.styl}line{font-family:\0000373}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000315}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000379}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/index\.styl}line{font-family:\000036}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/index\.styl}line{font-family:\000036}}
 
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/aliases\.styl}line{font-family:\000032}}
 
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/aliases\.styl}line{font-family:\0000314}}
+
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/ellipsis\.styl}line{font-family:\000032}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/ellipsis\.styl}line{font-family:\0000311}}
 
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/hide-text\.styl}line{font-family:\0000311}}
 
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/hide-text\.styl}line{font-family:\000039}}
+
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/replace-text\.styl}line{font-family:\000039}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/vendor\.styl}line{font-family:\00003557}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/replace-text\.styl}line{font-family:\0000310}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/config\.styl}line{font-family:\00003557}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/shadow-stroke\.styl}line{font-family:\000031}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/text\/shadow-stroke\.styl}line{font-family:\000033}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/vendor\.styl}line{font-family:\00003undefined}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/vendor\.styl}line{font-family:\00003576}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/config\.styl}line{font-family:\00003576}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/config\.styl}line{font-family:\0000312}}
 
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/size\.styl}line{font-family:\0000312}}
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\000034}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000316}}
 html,
 body,
 div,
@@ -110,27 +156,27 @@ td {
   vertical-align: baseline;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\000037}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000319}}
 body {
   line-height: 1;
   color: #000;
   background: #fff;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\000039}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000321}}
 ol,
 ul {
   list-style: none;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000311}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000323}}
 table {
   border-collapse: separate;
   border-spacing: 0;
   vertical-align: middle;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000313}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000325}}
 caption,
 th,
 td {
@@ -139,7 +185,7 @@ td {
   vertical-align: middle;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000315}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/reset\.styl}line{font-family:\0000327}}
 a img {
   border: none;
 }
@@ -167,12 +213,37 @@ body {
   padding: 10px;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000326}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000325}}
+.b-content-list {
+  margin-top: 5px;
+  padding-left: 20px;
+}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000329}}
+.b-content-list li {
+  padding: 5px 0;
+}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000341}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000342}}
+ul.b-content-list li {
+  list-style-type: disc;
+}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000346}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000347}}
+ol.b-content-list li {
+  list-style-type: decimal;
+}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000351}}
 .b-jquery {
   display: block;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000329}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000353}}
 .b-jquery-block {
   line-height: 1.666em;
   -webkit-border-radius: 5px;
@@ -184,12 +255,12 @@ body {
   vertical-align: top;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000338}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000361}}
 .b-jquery-block-title {
   margin-bottom: 10px;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000344}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/main\.styl}line{font-family:\0000366}}
 .b-code {
   font: 12px Consolas, "Liberation Mono", Courier, monospace;
   margin: 0 2px;
@@ -200,7 +271,9 @@ body {
   border-radius: 0.25em;
 }
 
-@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/label\.styl}line{font-family:\0000329}}
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/node_modules\/grunt-contrib-stylus\/node_modules\/nib\/lib\/nib\/size\.styl}line{font-family:\0000333}}
+
+@media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/label\.styl}line{font-family:\0000333}}
 
 @media -stylus-debug-info{filename{font-family:file\:\/\/\/Users\/antonignatov\/Sites\/requirejs-sandbox\/static\/styles\/stylus\/label\.styl}line{font-family:\000031}}
 .b-label {
